# ImarisConvertBioformats

./: README.md
ImarisConvertBioformats/: CMakeLists.txt
ImarisConvertBioformats/main/: bpConvertMain.cxx  bpConvertMainHelper.h  bpConverter.cxx  bpConverter.h  bpConverterApplication.cxx  bpConverterApplication.h  bpLogger.cxx  bpLogger.h  bpOutput.cxx  bpOutput.h
ImarisConvertBioformats/meta/: bpColor.cxx  bpColor.h  bpColorInfo.cxx  bpColorInfo.h  bpDataIO.cxx  bpDataIO.h  bpFileConversionColors.cxx  bpFileConversionColors.h  bpFileInfo.cxx  bpFileInfo.h  bpFileReader.cxx  bpFileReader.h  bpFileReaderConfiguration.cxx  bpFileReaderConfiguration.h  bpFileReaderFactory.cxx  bpFileReaderFactory.h  bpFileReaderFactoryFileIO.cxx  bpFileReaderFactoryFileIO.h  bpFileReaderImpl.cxx  bpFileReaderImpl.h  bpFileReaderImplInterfaceToImpl.h  bpFileReaderScene.cxx  bpFileReaderScene.h  bpFileReaderSeriesAdjustable.cxx  bpFileReaderSeriesAdjustable.h  bpFileReaderSeriesFileCheck.h  bpFileSeriesDelimiters.cxx  bpFileSeriesDelimiters.h  bpFileSeriesUtils.cxx  bpFileSeriesUtils.h  bpFileTools.cxx  bpFileTools.h  bpHash.h  bpImageDescriptor.h  bpImageDescriptorFactory.cxx  bpImageDescriptorFactory.h  bpImageDescriptorXmlTree.cxx  bpImageDescriptorXmlTree.h  bpNumberType.cxx  bpNumberType.h  (+14 more)
ImarisConvertBioformats/src/: bpConverterProgress.cxx  bpConverterProgress.h  bpConverterVersion.h  bpImageConvertNew.cxx  bpImageConvertNew.h  bpThroughputMeasurements.cxx  bpThroughputMeasurements.h  bpThroughputMeasurementsAggregator.cxx  bpThroughputMeasurementsAggregator.h  bpThroughputMeasurementsFetcher.cxx  bpThroughputMeasurementsFetcher.h  bpThumbnailReader.cxx  bpThumbnailReader.h  bpTimeout.cxx  bpTimeout.h  bpWriterCommonHeaders.h
ImarisConvertBioformats/thumbnailFile/: bpThumbnailImageConverter.cxx  bpThumbnailImageConverter.h  bpWriterFactoryFileThumbnail.cxx  bpWriterFactoryFileThumbnail.h  bpWriterFileThumbnail.cxx  bpWriterFileThumbnail.h
fileiobase/: CMakeLists.txt
fileiobase/application/: bpfException.h  bpfExceptionBase.h  bpfFileReaderImplFactoryBase.h  bpfFileReaderImplInterface.h
fileiobase/exceptions/: bpfException.cxx  bpfFileException.h  bpfFileFormatException.h  bpfFileIOException.h  bpfIllegalRangeException.cxx  bpfIllegalRangeException.h  bpfNoSuchSectionException.h
fileiobase/readers/: bpfFileReaderImpl.cxx  bpfFileReaderImpl.h  bpfFileReaderImplToImplInterface.h
fileiobase/types/: bpfColor.cxx  bpfColor.h  bpfColorInfo.cxx  bpfColorInfo.h  bpfColorUtils.cxx  bpfColorUtils.h  bpfHistogram.h  bpfHistogramBlocked.h  bpfHistogramBlockedParameters.h  bpfMatrix3.cxx  bpfMatrix3.h  bpfMatrix4.h  bpfPackedRGBA.h  bpfParameterSection.cxx  bpfParameterSection.h  bpfSectionContainer.cxx  bpfSectionContainer.h  bpfSmartPtr.h  bpfTimeInfo.cxx  bpfTimeInfo.h  bpfTypedefs.h  bpfTypes.cxx  bpfTypes.h  bpfVector3.h  bpfVector4.h
fileiobase/utils/: bpBoostFileSystemHeader.h  bpfFileTools.cxx  bpfFileTools.h  bpfInputFileStream64.cxx  bpfInputFileStream64.h  bpfSysInfo.cxx  bpfSysInfo.h  bpfUtils.cxx  bpfUtils.h  utf8.h  utf8checked.h  utf8core.h  utf8unchecked.h
fileiobioformats/: CMakeLists.txt
fileiobioformats/application/: bpDllAPI.h  bpFileIOBioformatsDllAPI.h  bpfFileReaderBioformats.cxx  bpfFileReaderBioformats.h  bpfFileReaderBioformatsImplFactory.cxx  bpfFileReaderBioformatsImplFactory.h  bpfTypesUtils.cxx  bpfTypesUtils.h
fileiobioformats/java/: bpfJNI.cxx  bpfJNI.h
